modifier les images

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ border-radius: 20px;
   width: 200px;
   margin-left: 10px;
   " type="text" placeholder="search">
-  <img src="icons8-search.svg" alt="">
+  <img src="pics/icons8-search.svg" alt="">
 </div>   
 
   </header> 
@@ -109,7 +109,7 @@ justify-content: space-between;">
            <img  style="width: 400px;
         height: 400px;
         margin-top: 90px;
-        margin-left: 100px;" src="pic.png" alt="">
+        margin-left: 100px;" src="pics/witch.jpg" alt="">
          </div> 
         </div>
 
