modifier les images

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ justify-content: space-between;">
            <img  style="width: 400px;
         height: 400px;
         margin-top: 90px;
-        margin-left: 100px;" src="pics/witch.jpg" alt="">
+        margin-left: 100px;" src="pics/gay-watching-movie-5365080-4491740 (1) 1.jpg" alt="">
          </div> 
         </div>
 
