--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
         <a
         style="text-decoration: none;
         margin-right: 50px;" 
-        href="cinema.html">CINEMA'S</a>
+        href="index.html">CINEMA'S</a>
       </li>
         <li>
           <a  style="text-decoration: none;" href="movies.html">Movies</a>
@@ -93,7 +93,12 @@ font-family: content;   ">
      color: black;
      height: 40px;
      width: 500px;">
-     <input type="text" placeholder="Name" class="input-nombre">
+     <input
+     style="background-color:#D9D9D9;
+     border: none;
+     outline: none;
+     color: black;"
+     type="text" placeholder="Name" class="input-nombre">
      </div>
      <div
      style="padding-left: 100px;
@@ -104,7 +109,11 @@ font-family: content;   ">
      height: 40px;
      width: 500px;
      margin-top: 20px;">
-     <input type="text" placeholder="Phone number" class="input-name">
+     <input 
+     style="background-color:#D9D9D9;
+     border: none;
+     outline: none;
+     color: black;"  type="text" placeholder="Phone number" class="input-name">
      </div>
      <div
      style="padding-left: 100px;
