--- a/movies.html
+++ b/movies.html
@@ -24,7 +24,7 @@
         <a
         style="text-decoration: none;
         margin-right: 50px;" 
-        href="cinema.html">CINEMA'S</a>
+        href="index.html">CINEMA'S</a>
       </li>
         <li>
           <a  style="text-decoration: none;" href="movies.html">Movies</a>
