--- a/movies.html
+++ b/movies.html
@@ -69,7 +69,7 @@ border-radius: 20px;
   width: 200px;
   margin-left: 10px;
   " type="text" placeholder="search">
-  <img src="icons8-search.svg" alt="">
+  <img src="pics/icons8-search.svg" alt="">
 </div>   
 
   </header> 
