la derniere modification

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ justify-content: space-between;">
            <img  style="width: 400px;
         height: 400px;
         margin-top: 90px;
-        margin-left: 100px;" src="pics/gay-watching-movie-5365080-4491740 (1) 1.jpg" alt="">
+        margin-left: 100px;
+        background: none;" src="pics/image.png" alt="">
          </div> 
         </div>
 
@@ -149,7 +150,6 @@ font-size: 20px;
 padding: 20px;
 border-radius: 40px;
 width: 200px;
-margin-left: 10px;
 margin-top: 10px;
 text-align: center;">
 BREAKING BAD
@@ -167,7 +167,6 @@ font-size: 20px;
 padding: 20px;
 border-radius: 40px;
 width: 200px;
-margin-left: 10px;
 margin-top: 10px;
 text-align: center;">
 SMILE
@@ -182,7 +181,6 @@ font-size: 20px;
 padding: 20px;
 border-radius: 40px;
 width: 200px;
-margin-left: 10px;
 margin-top: 10px;
 text-align: center;">
 THE WITCHER
@@ -197,7 +195,6 @@ font-size: 20px;
 padding: 20px;
 border-radius: 40px;
 width: 200px;
-margin-left: 10px;
 margin-top: 10px;
 text-align: center;">
 YOU
@@ -239,7 +236,6 @@ background-color: black;">
   padding: 20px;
   border-radius: 40px;
   width: 200px;
-  margin-left: 10px;
   margin-top: 10px;
   text-align: center;">
   BREAKING BAD
@@ -257,7 +253,6 @@ background-color: black;">
   padding: 20px;
   border-radius: 40px;
   width: 200px;
-  margin-left: 10px;
   margin-top: 10px;
   text-align: center;">
   SMILE
@@ -272,7 +267,6 @@ background-color: black;">
   padding: 20px;
   border-radius: 40px;
   width: 200px;
-  margin-left: 10px;
   margin-top: 10px;
   text-align: center;">
   THE WITCHER
@@ -287,7 +281,6 @@ background-color: black;">
   padding: 20px;
   border-radius: 40px;
   width: 200px;
-  margin-left: 10px;
   margin-top: 10px;
   text-align: center;">
   PRISON BREAK
